--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,8 @@
 service: CloudSinnBackend
 
+plugins:
+  - serverless-iam-roles-per-function
+
 provider:
   name: aws
   runtime: nodejs8.10
@@ -14,6 +17,9 @@ package:
     - "./src/jwt-lambda-authorizer/package.json"
     - "./src/jwt-lambda-authorizer/package-lock.json"
     - "invoke-secured-lambda.sh"
+    - "./package.json"
+    - "./package-lock.json"
+    - "./node_packages"
     - "src/env.yml"
     - "README.md"
 
@@ -39,7 +45,7 @@ functions:
           resultTtlInSeconds: 3600
 
   CloudSinnListStacks:
-    handler: src/stack/list_stacks.handler
+    handler: src/stack/list-stacks.handler
     events:
     - http:
         path: list-stacks
@@ -50,3 +56,7 @@ functions:
           identitySource: method.request.header.Authorization
           identityValidationExpression: ^Bearer [-0-9a-zA-z\.]*$
           resultTtlInSeconds: 3600
+    iamRoleStatements:
+    - Effect: "Allow"
+      Action: cloudformation:DescribeStacks
+      Resource: "*"
