ass backup and stack related lambdas

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "devDependencies": {
     "serverless-iam-roles-per-function": "1.0.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.395.0"
   }
 }
