--- a/serverless.yml
+++ b/serverless.yml
@@ -35,7 +35,7 @@ functions:
     handler: src/dispatcher/index.handler
     events:
     - http:
-        path: dispatcher
+        path: resources
         method: get
         authorizer:
           name: CloudSinnLambdaAuthorizer
@@ -44,11 +44,11 @@ functions:
           identityValidationExpression: ^Bearer [-0-9a-zA-z\.]*$
           resultTtlInSeconds: 3600
 
-  CloudSinnListStacks:
+  CloudSinnListStack:
     handler: src/stack/list-stacks.handler
     events:
     - http:
-        path: list-stacks
+        path: stacks
         method: get
         authorizer:
           name: CloudSinnLambdaAuthorizer
@@ -57,6 +57,23 @@ functions:
           identityValidationExpression: ^Bearer [-0-9a-zA-z\.]*$
           resultTtlInSeconds: 3600
     iamRoleStatements:
+    - Effect: "Allow"
+      Action: cloudformation:DescribeStacks
+      Resource: "*"
+
+  CloudSinnListStackStatus:
+    handler: src/stack/list-stack-status.handler
+    iamRoleStatements:
+    - Effect: "Allow"
+      Action: cloudformation:DescribeStacks
+      Resource: "*"
+
+  CloudSinnDatabaseBackup:
+    handler: src/database/backup-summaries.handler
+    iamRoleStatements:
+    - Effect: "Allow"
+      Action: dynamodb:ListBackups
+      Resource: "*"
     - Effect: "Allow"
       Action: cloudformation:DescribeStacks
       Resource: "*"
