--- a/src/env.yml
+++ b/src/env.yml
@@ -1,3 +1,3 @@
-JWKS_URI: https://qwertz543210.auth0.com/.well-known/jwks.json
-AUDIENCE: https://qwertz543210.auth0.com/api/v2/
-TOKEN_ISSUER: https://qwertz543210.auth0.com/
+JWKS_URI: https://xray123.eu.auth0.com/.well-known/jwks.json
+AUDIENCE: https://xray123.eu.auth0.com/api/v2/
+TOKEN_ISSUER: https://xray123.eu.auth0.com/
