--- a/serverless.yml
+++ b/serverless.yml
@@ -38,6 +38,7 @@ functions:
     - http:
         path: resources
         method: get
+        cors: true
         authorizer:
           name: CloudSinnLambdaAuthorizer
           type: token
@@ -55,6 +56,7 @@ functions:
     - http:
         path: stacks
         method: get
+        cors: true
         authorizer:
           name: CloudSinnLambdaAuthorizer
           type: token
